verif/test/deca/context/invalid/float-to-int-verif.res
src/test/deca/context/invalid/float-to-int.deca:13:8: Cannot assign expression of type 'float' to a variable of type 'int'
